--- a/Laan.Tools.Tail.Wpf/packages.config
+++ b/Laan.Tools.Tail.Wpf/packages.config
@@ -1,5 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Caliburn.Micro" version="1.3.1" />
-  <package id="MahApps.Metro" version="0.5.0.0" />
+  <package id="Caliburn.Micro" version="1.3.1" userInstalled="true" />
+  <package id="MahApps.Metro" version="0.5.0.0" userInstalled="true" />
+  <package id="Rx-Core" version="2.2.5" targetFramework="net4-client" userInstalled="true" />
+  <package id="Rx-Interfaces" version="2.2.5" targetFramework="net4-client" userInstalled="true" />
+  <package id="Rx-Linq" version="2.2.5" targetFramework="net4-client" userInstalled="true" />
+  <package id="Rx-Main" version="2.2.5" targetFramework="net4-client" userInstalled="true" />
+  <package id="Rx-PlatformServices" version="2.2.5" targetFramework="net4-client" userInstalled="true" />
 </packages>
